# pystiche

./: .cirun.yml  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  codecov.yml  dummy.py  gen_torch_cpu_requirements.py  hubconf.py  main.py  mypy.ini  paper.md  pyproject.toml  pytest.ini  references.bib  requirements-dev.txt  requirements-doc.txt  requirements-lint.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.ci/: after_success.sh  install.sh  test.sh
.github/: CODEOWNERS
.github/workflows/: docs-build.yml  docs-dispatch.yml  docs-full.yml  docs.yml  lint-style.yml  lint-typing.yml  lint.yml  publish.yml  publishable.yml  tests-download.yml  tests.yml
demo/: demo1.py  demo2.py  demo3.py  utils.py
docs/: gen_rtd_torch_requirements.py  generate_requirements_rtd.py  requirements-rtd.txt  rtd_torch_requirements.txt  torch_for_docs.txt
docs/source/: .gitignore  conf.py  custom_cmds.tex  general.rst  getting_started.rst  gist.rst  index.rst  installation.rst  literature.rst  loss.rst  ops.rst  optim.rst  pystiche.sty  references.bib  tutorials.rst
docs/source/api/: index.rst  pystiche.data.rst  pystiche.demo.rst  pystiche.demo.rst.template  pystiche.enc.rst  pystiche.image.rst  pystiche.image.transforms.rst  pystiche.loss.functional.rst  pystiche.loss.rst  pystiche.meta.rst  pystiche.misc.rst  pystiche.ops.functional.rst  pystiche.ops.rst  pystiche.optim.rst  pystiche.pyramid.rst  pystiche.rst
docs/source/auto_examples/: sg_execution_times.rst  tutorial_image_based_optimization.ipynb  tutorial_image_based_optimization.py.md5  tutorial_image_based_optimization.rst  tutorial_image_based_optimization_codeobj.pickle  tutorial_image_based_optimization_with_pyramid.ipynb  tutorial_image_based_optimization_with_pyramid.py  tutorial_image_based_optimization_with_pyramid.rst  tutorial_nst_without_pystiche.py  tutorial_nst_without_pystiche.py.md5  tutorial_nst_without_pystiche.rst
docs/source/auto_tutorials/: README.md  index.rst  sg_execution_times.rst  tutorial_image_based_optimization.ipynb  tutorial_image_based_optimization.py  tutorial_image_based_optimization.py.md5  tutorial_image_based_optimization.rst  tutorial_image_based_optimization_codeobj.pickle  tutorial_image_based_optimization_with_pyramid.ipynb  tutorial_image_based_optimization_with_pyramid.py  tutorial_image_based_optimization_with_pyramid.py.md5  tutorial_image_based_optimization_with_pyramid.rst  (+3 more)
docs/source/gist/: index.rst  (+4 more)
examples/: .gitignore  README.rst  example_image_based_optimization.py  example_nst_with_pystiche.py  example_nst_without_pystiche.py
examples/advanced/: _model_based_optimization.py  _model_optimization.py  example_guided_image_optimization.py  example_image_based_optimization_with_pyramid.py  example_image_optimization_with_pyramid.py  example_model_based_optimization.py  example_model_optimization.py
examples/beginner/: README.rst  example_multi_layer_encoder.py  example_nst_with_pystiche.py  example_nst_without_pystiche.py
images/: download_images.py
pystiche/: __about__.py  __init__.py  __version__.py  _base.py  _cli.py  _compat.py  _git.py  _math.py  _utils.py  _version.py  cuda.py  demo.py  functional.py  loss.py  meta.py  misc.py  optim.py  papers.py  typing.py
pystiche/core/: __init__.py  _base.py  _home.py  _math.py  _meta.py  _modules.py  _objects.py  _utils.py
pystiche/data/: __init__.py  datasets.py  license.py  sampler.py
pystiche/enc/: __init__.py  alexnet.py  encoder.py  guides.py  multi_layer_encoder.py  prepostprocessing.py  preprocessing.py  vgg.py
pystiche/encoding/: __init__.py  alexnet.py  encoder.py  vgg.py
pystiche/image/: __init__.py  _transforms.py  guides.py  io.py  processing.py  utils.py
pystiche/loss/: __init__.py  _comparison.py  _container.py  _legacy.py  _loss.py  _regularization.py  functional.py  loss.py  loss_dict.py  multi_op.py  multi_op_encoder.py  multi_op_loss.py  perceptual.py  pyramid.py  utils.py
pystiche/misc/: __init__.py  cuda.py  misc.py
pystiche/nst/: __init__.py  encoder.py  functional.py  representation.py
pystiche/ops/: __init__.py  _base.py  _ops.py  comparison.py  container.py  encoding.py  functional.py  guidance.py  meta.py  op.py  pixel.py  regularization.py  representation.py
pystiche/optim/: __init__.py  log.py  meter.py  optim.py
pystiche/papers/: __init__.py  gatys_ecker_bethge_2015.py  gatys_et_al_2017.py  li_wand_2016.py
pystiche/pyramid/: __init__.py  level.py  pyramid.py  pyramid_old.py  storage.py
replication/: gatys_ecker_bethge_2015.py  gatys_et_al_2017.py  li_wand_2016.py  utils.py
scripts/: README.md  check_docs_references.py  generate_requirements_rtd.py  perform_model_optimization.py
test/: image_test_case.py  image_testcase.py  test_about.py  test_core.py  test_image.py  test_image_io.py  test_image_transforms.py  test_image_utils.py  test_loss.py  test_math.py  test_misc.py  test_misc_cuda.py  test_smoke.py  test_typing.py  utils.py
tests/: asserts.py  conftest.py  fixtures.py  mocks.py  test_core.py  test_data.py  test_data_collections.py  test_demo.py  test_enc.py  test_image.py  test_image_transforms.py  test_loss.py  test_meta.py  test_misc.py  test_ops.py  test_optim.py  test_pyramid.py  test_smoke.py  test_typing.py  utils.py
tests/assets/: __init__.py  download_test_image.py  generate_enc_assets.py  generate_optim_assets.py  utils.py
tests/cli/: test_cli.py
tests/download/: test_images.py  utils.py
tests/galleries/: __init__.py  conftest.py  test_galleries.py
tests/hub/: conftest.py  test_hub.py  test_vgg.py
tests/integration/: test_optim.py  test_package.py  test_smoke.py
third_party_stubs/PIL/: Image.pyi
tutorials/: README.rst  tutorial_image_based_optimization.py  tutorial_image_based_optimization_with_pyramid.py  tutorial_nst_without_pystiche.py
webapp/: manage.py
webapp/app/: forms.py  models.py  tests.py  views.py
webapp/webapp/: __init__.py  settings.py  urls.py  wsgi.py
(+197 files in other folders)
