[metadata]
name = pystiche
platforms = any
description = Framework for Neural Style Transfer built upon PyTorch
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = neural-style-transfer, framework, pytorch
url = https://github.com/pmeier/pystiche
author = Philip Meier
author_email = github.pmeier@posteo.de
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/pystiche/pystiche/issues
    Documentation = https://pystiche.readthedocs.io
    Source Code = https://github.com/pystiche/pystiche


[options]
packages = find:
include_package_data = True
python_requires = >=3.7
# Remember to re-run scripts/generate_requirements_rtd.py if you change the install
# requirements
install_requires =
    torch==1.12.1
    torchvision==0.13.1
    pillow!=8.3.0
    tqdm

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    pystiche=pystiche._cli:main
